# merman

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  Package.swift  README.md  THIRD_PARTY_NOTICES.md  dist-workspace.toml
crates/dugong/: Cargo.toml  README.md
crates/dugong-graphlib/: Cargo.toml  README.md
crates/dugong-graphlib/src/: graph.rs  json.rs  lib.rs
crates/dugong-graphlib/tests/: alg_test.rs  graph_core_test.rs  json_test.rs  undirected_test.rs
crates/dugong/benches/: feasible_tree.rs  layout_dagreish.rs  network_simplex.rs
crates/dugong/src/: acyclic.rs  add_border_segments.rs  coordinate_system.rs  greedy_fas.rs  lib.rs  model.rs  nesting_graph.rs  normalize.rs  order.rs  parent_dummy_chains.rs  pipeline.rs  position.rs  rank.rs  self_edges.rs  util.rs
crates/dugong/tests/: acyclic_test.rs  add_border_segments_test.rs  bundle_test.rs  coordinate_system_test.rs  data_list_test.rs  feasible_tree_test.rs  greedy_fas_test.rs  layout_test.rs  nesting_graph_test.rs  network_simplex_test.rs  normalize_test.rs  order_add_subgraph_constraints_test.rs  order_barycenter_test.rs  order_build_layer_graph_test.rs  order_cross_count_test.rs  order_init_order_test.rs  order_order_test.rs  order_resolve_conflicts_test.rs  order_sort_subgraph_test.rs  order_sort_test.rs  parent_dummy_chains_test.rs  position_bk_test.rs  position_test.rs  rank_test.rs  rank_util_test.rs  unique_id_test.rs  util_test.rs  version_test.rs
crates/manatee/: Cargo.toml  README.md
crates/manatee/src/: lib.rs
crates/manatee/tests/: public_api.rs
crates/merman/: Cargo.toml  README.md
crates/merman-analysis/: Cargo.toml  README.md
crates/merman-analysis/src/: analyzer.rs  cancellation.rs  diagnostic_projection.rs  document.rs  editor.rs  lib.rs  lsp.rs  markdown.rs  options_json.rs  payload.rs  recovery.rs  result.rs  rules.rs  source_config_rewrite.rs  source_directives.rs  source_limits.rs  source_map.rs  status.rs
crates/merman-analysis/tests/: analyzer.rs  lsp_positions.rs  payload_schema.rs  source_positions.rs
crates/merman-ascii/: ASCII_GAP_REGISTRY.md  ASCII_REFERENCE_COMPARISON.md  Cargo.toml  FLOWCHART_SUPPORT.md  README.md  SEQUENCE_SUPPORT.md  STATE_SUPPORT.md  V1_MERMAID_ASCII_COVERAGE.md
crates/merman-ascii/src/: canvas.rs  capability.rs  color.rs  error.rs  gantt.rs  git_graph.rs  journey.rs  kanban.rs  lib.rs  mindmap.rs  options.rs  packet.rs  relation_graph.rs  sequence.rs  style_color.rs  terminal.rs  text.rs  timeline.rs  tree_view.rs
crates/merman-ascii/tests/: class_model.rs  er_model.rs  fixture_inventory.rs  flowchart_model.rs  graph_fixture.rs  new_family_models.rs  sequence_model.rs  state_model.rs  xychart_model.rs
crates/merman-bindings-core/: Cargo.toml  README.md
crates/merman-bindings-core/src/: ascii.rs  common.rs  engine.rs  lib.rs  metadata.rs  render.rs
crates/merman-cli/: Cargo.toml  README.md
crates/merman-cli/src/: cli.rs  commands.rs  config.rs  error.rs  io.rs  main.rs  markdown.rs  render.rs
crates/merman-cli/tests/: ascii_smoke.rs  cli_compat.rs  jpeg_smoke.rs  pdf_smoke.rs  png_smoke.rs  ratex_math.rs
crates/merman-core/: Cargo.toml  README.md
crates/merman-core/src/: baseline.rs  common.rs  common_db.rs  editor.rs  entities.rs  error.rs  family.rs  geom.rs  inline_config.rs  lib.rs  parse_pipeline.rs  runtime.rs  sanitize.rs  theme.rs  time.rs  utils.rs  yaml_config.rs
crates/merman-core/tests/: nesting_depth_limits.rs  snapshots.rs
crates/merman-editor-core/: Cargo.toml  README.md
crates/merman-editor-core/src/: code_actions.rs  completion.rs  context.rs  diagnostics.rs  lib.rs  semantic_tokens.rs  snapshot.rs  structure.rs  types.rs  workspace.rs
crates/merman-editor-core/tests/: code_actions.rs  completion.rs  diagnostics.rs  document_workspace.rs  semantic_facts.rs  semantic_tokens.rs  structure.rs
crates/merman-elk-layered/: Cargo.toml  README.md
crates/merman-elk-layered/LICENSES/: EPL-2.0.txt
crates/merman-elk-layered/src/: compound.rs  configurator.rs  graph.rs  importer.rs  intermediate.rs  lib.rs  options.rs  p1cycles.rs  p2layers.rs  p3order.rs  p4nodes.rs  p5edges.rs  pipeline.rs  random.rs  selfloops.rs  transform.rs
crates/merman-ffi/: Cargo.toml  README.md
crates/merman-ffi/examples/: render_svg.c  render_svg_engine.c
crates/merman-ffi/include/: merman.h
crates/merman-ffi/src/: android_jni.rs  lib.rs
crates/merman-ffi/tests/: c_consumer_smoke.c  c_consumer_smoke.rs  header_smoke.rs
crates/merman-layout-elk/: Cargo.toml  README.md
crates/merman-layout-elk/src/: compat.rs  lib.rs
crates/merman-lsp/: Cargo.toml  README.md
crates/merman-lsp/src/: analysis_executor.rs  analysis_request.rs  client_profile.rs  code_actions.rs  completion.rs  completion_tests.rs  context.rs  diagnostics.rs  diagnostics_tests.rs  document_store.rs  document_store_tests.rs  lib.rs  main.rs  protocol.rs  refresh_coordinator.rs  refresh_transport.rs  semantic_tokens.rs  server.rs  snapshot.rs  snapshot_context.rs  snapshot_context_tests.rs  structure.rs  sync.rs  transport.rs
crates/merman-lsp/tests/: capabilities.rs  completion.rs  diagnostics.rs  document_store.rs  server_smoke.rs  stdio_smoke.rs
crates/merman-render/: Cargo.toml  README.md
crates/merman-render/assets/: README.md  c4_database_d_11_12_2.txt  katex_flowchart_probe.cjs  sequence_base_defs_11_12_2.svgfrag
crates/merman-render/examples/: class_debug_svg.rs  er_debug_svg.rs  er_svg.rs  flowchart_debug_svg.rs  ratex_math_audit.rs  state_debug_svg.rs
crates/merman-render/src/: architecture.rs  architecture_metrics.rs  block.rs  c4.rs  chart_palette.rs  (+39 more)
crates/merman-rustdoc/: Cargo.toml  README.md
crates/merman-typst-plugin/: Cargo.toml  README.md
crates/merman-uniffi/: Cargo.toml  README.md
crates/merman-wasm/: Cargo.toml  README.md
crates/xtask/: Cargo.toml  default_config_overrides.json  default_config_schema.yaml
fuzz/: Cargo.toml
fuzz/dictionaries/: mermaid.dict  svg.dict
fuzz/fuzz_targets/: ffi_api.rs  parse_mermaid.rs  render_mermaid.rs  svg_pipeline.rs
fuzz/src/: lib.rs
(+9451 files in other folders)
