[workspace]
resolver = "2"
members = [
  "crates/merman",
  "crates/merman-core",
  "crates/merman-ascii",
  "crates/merman-bindings-core",
  "crates/merman-cli",
  "crates/merman-ffi",
  "crates/merman-rustdoc",
  "crates/merman-render",
  "crates/merman-typst-plugin",
  "crates/merman-uniffi",
  "crates/merman-wasm",
  "crates/dugong",
  "crates/dugong-graphlib",
  "crates/manatee",
  "crates/roughr",
  "crates/xtask",
]
exclude = [
  "repo-ref/dear-imgui-rs",
  "repo-ref/mermaid-rs-renderer",
]

[workspace.package]
version = "0.8.0-alpha.1"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/merman"
homepage = "https://github.com/Latias94/merman"
rust-version = "1.95"

[workspace.dependencies]
base64 = "0.22.1"
euclid = "0.22"
htmlize = { version = "1.0.6", features = ["unescape"] }
indexmap = { version = "2.2.6", features = ["serde"] }
lalrpop = "0.20.2"
lalrpop-util = "0.20.2"
logos = "0.14.4"
nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
pulldown-cmark = "0.12.2"
ratex-layout = "0.1.10"
ratex-parser = "0.1.10"
ratex-svg = { version = "0.1.10", default-features = false }
ratex-types = "0.1.10"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
rayon = "1.10.0"
roxmltree = "0.20.0"
rustc-hash = "2.1.1"
ryu-js = "1.0.2"
roughr = { package = "roughr-merman", path = "crates/roughr", version = "0.12.0", default-features = false }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
serde_yaml = "0.9.34"
toml = "0.9.12"
json5 = "0.4.1"
thiserror = "2.0.11"
tracing = "0.1.41"
uniffi = "0.31.1"
futures = "0.3.31"
hashbrown = "0.16.1"
lol_html = "2.7.1"
url = "2.5.4"
uuid = { version = "1.12.1", default-features = false, features = ["std"] }
chrono = { version = "0.4.40", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
console_error_panic_hook = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
png = "0.17.16"
proc-macro2 = "1"
quote = "1"
resvg = "0.46.0"
serde-wasm-bindgen = "0.6"
syn = { version = "2", features = ["full", "parsing"] }
usvg = "0.46.0"
tiny-skia = "0.11.4"
svg2pdf = "0.13.0"
unicode-width = "0.2.2"
wasm-bindgen = "0.2"
web-time = "1.1.0"
wasm-minimal-protocol = "0.2.0"

# Workspace crates (publishable). Keeping versions explicit makes `cargo publish` work without
# duplicating version requirements across crates.
merman = { path = "crates/merman", version = "0.8.0-alpha.1", default-features = false }
merman-ascii = { path = "crates/merman-ascii", version = "0.8.0-alpha.1" }
merman-bindings-core = { path = "crates/merman-bindings-core", version = "0.8.0-alpha.1", default-features = false }
merman-core = { path = "crates/merman-core", version = "0.8.0-alpha.1", default-features = false }
merman-ffi = { path = "crates/merman-ffi", version = "0.8.0-alpha.1" }
merman-rustdoc = { path = "crates/merman-rustdoc", version = "0.8.0-alpha.1" }
merman-render = { path = "crates/merman-render", version = "0.8.0-alpha.1", default-features = false }
merman-typst-plugin = { path = "crates/merman-typst-plugin", version = "0.8.0-alpha.1" }
merman-uniffi = { path = "crates/merman-uniffi", version = "0.8.0-alpha.1" }
merman-wasm = { path = "crates/merman-wasm", version = "0.8.0-alpha.1" }
merman-cli = { path = "crates/merman-cli", version = "0.8.0-alpha.1" }
dugong = { path = "crates/dugong", version = "0.8.0-alpha.1" }
dugong-graphlib = { path = "crates/dugong-graphlib", version = "0.8.0-alpha.1" }
manatee = { path = "crates/manatee", version = "0.8.0-alpha.1" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.wasm-size]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
