[workspace]
resolver = "2"
members = [
    "crates/merman",
    "crates/merman-analysis",
    "crates/merman-editor-core",
    "crates/merman-core",
    "crates/merman-ascii",
    "crates/merman-bindings-core",
    "crates/merman-cli",
    "crates/merman-lsp",
    "crates/merman-ffi",
    "crates/merman-elk-layered",
    "crates/merman-layout-elk",
    "crates/merman-rustdoc",
    "crates/merman-render",
    "crates/merman-typst-plugin",
    "crates/merman-uniffi",
    "crates/merman-wasm",
    "crates/dugong",
    "crates/dugong-graphlib",
    "crates/manatee",
    "crates/roughr",
    "crates/xtask",
]
exclude = [
    "repo-ref/dear-imgui-rs",
    "repo-ref/mermaid-rs-renderer",
]

[workspace.package]
version = "0.8.0-alpha.3"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/merman"
homepage = "https://github.com/Latias94/merman"
rust-version = "1.95"

[workspace.dependencies]
base64 = "0.22.1"
brotli = "8.0.3"
euclid = "0.22.14"
flate2 = "1.1.9"
htmlize = { version = "1.1.0", features = ["unescape"] }
indexmap = { version = "2.2.6", features = ["serde"] }
lalrpop = "0.23.1"
lalrpop-util = "0.23.1"
nalgebra = { version = "0.35.0", default-features = false, features = ["std"] }
pulldown-cmark = "0.13.4"
ratex-layout = "0.1.11"
ratex-parser = "0.1.11"
ratex-svg = { version = "0.1.11", default-features = false }
ratex-types = "0.1.11"
regex = "1.11.1"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "default-tls"] }
rayon = "1.12.0"
roxmltree = "0.21.1"
rustc-hash = "2.1.1"
ryu-js = "1.0.2"
roughr = { package = "roughr-merman", path = "crates/roughr", version = "0.12.1", default-features = false }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
granit-parser = "0.0.6"
serde-saphyr = "0.0.28"
toml = "1.1.2"
json5 = "1.3.1"
js-sys = "0.3"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
uniffi = "0.32.0"
futures = "0.3.31"
hashbrown = "0.17.1"
lol_html = "3.0"
url = "2.5.4"
uuid = { version = "1.23", default-features = false, features = ["std"] }
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
console_error_panic_hook = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
png = "0.18"
proc-macro2 = "1"
quote = "1"
resvg = "0.47"
serde-wasm-bindgen = "0.6"
syn = { version = "2", features = ["full", "parsing"] }
usvg = "0.47"
tiny-skia = "0.12"
krilla = "0.8"
krilla-svg = "0.8"
unicode-width = "0.2.2"
wasm-bindgen = "0.2"
web-time = "1.1.0"
wasm-minimal-protocol = "0.2.0"
wasmi = { version = "1.0.9", default-features = false, features = ["simd"] }
lsp-types = "0.94.1"
tower-lsp = "0.20.0"

# Workspace crates (publishable). Keeping versions explicit makes `cargo publish` work without
# duplicating version requirements across crates.
merman = { path = "crates/merman", version = "0.8.0-alpha.3", default-features = false }
merman-analysis = { path = "crates/merman-analysis", version = "0.8.0-alpha.3", default-features = false }
merman-ascii = { path = "crates/merman-ascii", version = "0.8.0-alpha.3", default-features = false }
merman-bindings-core = { path = "crates/merman-bindings-core", version = "0.8.0-alpha.3", default-features = false }
merman-core = { path = "crates/merman-core", version = "0.8.0-alpha.3", default-features = false }
merman-editor-core = { path = "crates/merman-editor-core", version = "0.8.0-alpha.3", default-features = false }
merman-elk-layered = { path = "crates/merman-elk-layered", version = "0.8.0-alpha.3", default-features = false }
merman-layout-elk = { path = "crates/merman-layout-elk", version = "0.8.0-alpha.3", default-features = false }
merman-ffi = { path = "crates/merman-ffi", version = "0.8.0-alpha.3" }
merman-rustdoc = { path = "crates/merman-rustdoc", version = "0.8.0-alpha.3" }
merman-render = { path = "crates/merman-render", version = "0.8.0-alpha.3", default-features = false }
merman-typst-plugin = { path = "crates/merman-typst-plugin", version = "0.8.0-alpha.3" }
merman-uniffi = { path = "crates/merman-uniffi", version = "0.8.0-alpha.3" }
merman-wasm = { path = "crates/merman-wasm", version = "0.8.0-alpha.3" }
merman-cli = { path = "crates/merman-cli", version = "0.8.0-alpha.3" }
dugong = { path = "crates/dugong", version = "0.8.0-alpha.3" }
dugong-graphlib = { path = "crates/dugong-graphlib", version = "0.8.0-alpha.3" }
manatee = { path = "crates/manatee", version = "0.8.0-alpha.3" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.wasm-size]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
