[package]
name = "dugong"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dagre-compatible graph layout algorithms (port of dagrejs/dagre)."
keywords = ["graph", "layout", "dagre", "diagrams"]
categories = ["visualization"]

[dependencies]
dugong-graphlib.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
gag = "1.0.0"
