[package]
name = "dugong"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dagre-compatible graph layout algorithms (port of dagrejs/dagre)."
documentation = "https://docs.rs/dugong"
readme = "README.md"
keywords = ["graph", "layout", "dagre", "diagrams"]
categories = ["visualization"]

[features]
default = ["dagreish"]
# A parity-oriented pipeline that mirrors upstream dagre more closely.
dagreish = []

[dependencies]
dugong-graphlib.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
gag = "1.0.0"
