[package]
name = "merman-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Diagnostics-first analysis contracts and source mapping for Merman."
documentation = "https://docs.rs/merman-analysis"
readme = "README.md"
keywords = ["mermaid", "diagnostics", "lint", "lsp", "parser"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
