[package]
name = "merman-bindings-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Safe shared binding facade for merman native bindings."
documentation = "https://docs.rs/merman-bindings-core"
readme = "README.md"
keywords = ["mermaid", "diagrams", "bindings", "svg", "headless"]
categories = ["api-bindings", "visualization"]

[features]
default = ["render"]
ascii = ["merman/ascii"]
render = ["merman/render"]
ratex-math = ["render", "dep:merman-render", "merman-render/ratex-math"]
raster = ["merman/raster"]

[dependencies]
merman = { path = "../merman", version = "0.7.0-alpha.1", default-features = false }
merman-render = { path = "../merman-render", version = "0.7.0-alpha.1", optional = true }
serde.workspace = true
serde_json.workspace = true
