[package]
name = "merman-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI to parse/layout/render Mermaid diagrams to SVG/PNG/JPG/PDF/ASCII/Unicode (headless)."
documentation = "https://docs.rs/merman-cli"
readme = "README.md"
keywords = ["mermaid", "diagrams", "svg", "cli", "headless"]
categories = ["command-line-utilities", "visualization"]

[features]
default = ["ratex-math", "ascii"]
ascii = ["merman/ascii"]
ratex-math = ["merman/ratex-math"]

[dependencies]
clap.workspace = true
merman = { workspace = true, features = ["raster"] }
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.14.0"
png.workspace = true
