[package]
name = "merman-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Mermaid parser + semantic model (headless)."
keywords = ["mermaid", "diagrams", "parser", "ast"]
categories = ["parser-implementations", "visualization"]
build = "build.rs"

[features]
default = ["large-features"]
large-features = []

[dependencies]
euclid.workspace = true
htmlize.workspace = true
indexmap.workspace = true
lalrpop-util.workspace = true
logos.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
lol_html.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
ryu-js.workspace = true

[build-dependencies]
lalrpop.workspace = true

[dev-dependencies]
futures.workspace = true
