[package]
name = "merman-elk-layered"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "EPL-2.0"
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Source-backed Eclipse ELK layered layout port for merman."
documentation = "https://docs.rs/merman-elk-layered"
readme = "README.md"
keywords = ["elk", "layout", "layered", "diagrams"]
categories = ["visualization"]

[features]
default = ["layered"]
# First admission target for Mermaid's `layout: elk` / `flowchart-elk` support.
layered = []

[dependencies]
