[package]
name = "merman-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "C ABI bindings for merman headless Mermaid rendering."
documentation = "https://docs.rs/merman-ffi"
readme = "README.md"
keywords = ["mermaid", "diagrams", "ffi", "svg", "headless"]
categories = ["external-ffi-bindings", "visualization"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["render"]
render = ["merman-bindings-core/render"]
ratex-math = ["render", "merman-bindings-core/ratex-math"]
raster = ["merman-bindings-core/raster"]

[dependencies]
merman-bindings-core.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[dev-dependencies]
cc = "1.2"
libloading = "0.8"
serde_json.workspace = true
