[package]
name = "merman-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "C ABI bindings for merman headless Mermaid rendering."
documentation = "https://docs.rs/merman-ffi"
readme = "README.md"
keywords = ["mermaid", "diagrams", "ffi", "svg", "headless"]
categories = ["external-ffi-bindings", "visualization"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["core-full", "core-host", "render", "ascii"]
core-full = ["merman-bindings-core/core-full"]
core-host = ["merman-bindings-core/core-host"]
ascii = ["merman-bindings-core/ascii"]
render = ["merman-bindings-core/render"]
elk-layout = ["merman-bindings-core/elk-layout"]
ratex-math = ["render", "merman-bindings-core/ratex-math"]
raster = ["merman-bindings-core/raster"]

[dependencies]
merman-bindings-core.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.22.4", default-features = false }

[dev-dependencies]
cc = "1.2.64"
libloading = "0.9.0"
serde_json.workspace = true
