[package]
name = "merman-layout-elk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Optional ELK layout engine integration for merman."
documentation = "https://docs.rs/merman-layout-elk"
readme = "README.md"
keywords = ["mermaid", "elk", "layout", "diagrams"]
categories = ["visualization"]

[features]
default = ["layered"]
# First admission target for Mermaid's `layout: elk` / `flowchart-elk` support.
layered = []

[dependencies]
thiserror.workspace = true
